--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,15 @@ dependencies:
   firebase_storage: ^10.2.9
   firebase_core: ^1.13.1
   syncfusion_flutter_pdfviewer: ^19.4.56-beta
+  json_annotation: ^4.4.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.1.8
+  json_serializable: ^6.1.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,6 +64,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/exam_questions.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
