--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^19.4.56-beta
   json_annotation: ^4.4.0
   http: ^0.13.4
+  video_player: ^2.3.0
 
 dev_dependencies:
   flutter_test:
