--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,12 +48,12 @@ dev_dependencies:
   build_runner: ^2.1.8
   json_serializable: ^6.1.5
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^2.1.6
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/e_mc2.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,6 +67,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/exam_questions.json
+    - assets/e_mc2.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
