--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  step_progress_indicator: ^1.0.2
   cupertino_icons: ^1.0.2
   firebase_storage: ^10.2.9
   firebase_core: ^1.13.1
