--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   video_player: ^2.3.0
   shared_preferences: ^2.0.15
   iconsax: ^0.0.8
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -30,7 +31,7 @@ dev_dependencies:
   build_runner: ^2.1.8
   json_serializable: ^6.1.5
 
-  flutter_lints: ^1.0.0
+  # flutter_lints: ^1.0.0
   flutter_native_splash: ^2.1.6
 
 flutter_native_splash:
