--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,14 @@ dependencies:
   shared_preferences: ^2.0.15
   iconsax: ^0.0.8
   flutter_svg: ^1.0.3
+  cloud_firestore: ^3.1.17
+  cloud_functions: ^3.2.16
+  firebase_messaging: ^11.4.1
+  firebase_database: ^9.0.15
+  firebase_auth: ^3.3.19
+  email_auth: ^1.0.0
+  cached_network_image: ^3.2.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
